[package]
name    = "rustunnel"
version = "0.1.0"
edition = "2018"
build   = "build.rs"

rust-version = "1.55"

description = "Sandboxed TLS tunnel library"
license     = "AGPL-3.0-or-later"
repository  = "https://github.com/rustunnel/rustunnel"
categories  = ["cryptography"]
keywords    = ["tls", "ssl"]

[dependencies]
clear_on_drop = "0.2"
failure       = "0.1"
libc          = "0.2"
log           = { version = "0.4", features = ["std"] }
nix           = "0.23"
openssl       = { rev = "ea6761d5e7b63b415b7fda6ba5c5026f4218bcd0", git = "https://github.com/signalapp/rust-openssl.git" }

[target.'cfg(target_os = "linux")'.dependencies]
seccomp-sys = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
native-tls  = "=0.2.4"
rand_core   = "0.6"
rand_chacha = "0.3"

[[test]]
name    = "client_child_test"
harness = false

[[test]]
name    = "server_child_test"
harness = false
